# Subdivider

./: .gitignore  .gitmodules  BuildApps.txt  CMakeLists.txt  CMakePresets.json  Example.txt  README.md
consumerApp/: CMakeLists.txt  main.cpp
consumerApp/include/: animator.hpp  app.hpp  render_mesh.hpp
consumerApp/src/: animator.cpp  app.cpp  render_mesh.cpp
subdiv/: CMakeLists.txt
subdiv/include/: BaseMesh.hpp  config.hpp  subdiv.hpp  utils.hpp
subdiv/include/control/: mesh.hpp  mesh_cache.hpp  mesh_types.hpp  utils.hpp
subdiv/include/diagnostics/: context.hpp
subdiv/include/plan/: face_config.hpp  faceconfig.hpp  plan_types.hpp  stencil_builder.hpp  subdivisionplan.hpp
subdiv/src/: BaseMesh.cpp  subdiv.cpp
subdiv/src/control/: mesh.cpp  mesh_cache.cpp
subdiv/src/diagnostics/: context.cpp
subdiv/tests/: CMakeLists.txt  test_controlmesh.cpp  test_diagnostics.cpp  test_halfedge.cpp  test_mesh.cpp  test_meshcache.cpp  test_utils.cpp
